changes on the head of each html

--- a/pages/penal.html
+++ b/pages/penal.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Iglesias y Abogados</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
@@ -39,22 +40,23 @@
         <div class="container-fluid background-image-penal"></div>
     </header>
 
-    <main class="ml-3 mr-3  penal-main-section">
-
+    <main class="ml-3 mr-3 penal-main-section">
         <section class="first-main-section">
-            <div class='first-header'>
-                <h3 class='text-center'>Área Penal</h3>
-                <p class='text-center fist-paragraph'>En el área de derecho penal nos especializamos en diferentes ramas
-                    como lo son maleantes, etc.</p>
+            <div class="first-header">
+                <h3 class="text-center">Área Penal</h3>
+                <p class="text-center fist-paragraph">
+                    En el área de derecho penal nos especializamos en diferentes ramas
+                    como lo son maleantes, etc.
+                </p>
             </div>
         </section>
 
         <section class="second-main-section">
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #C3CEDA; width: 10rem;">
+                    <div class="card" style="background-color: #c3ceda; width: 10rem">
                         <img src="https://cdn.pixabay.com/photo/2014/12/02/11/21/prison-553836_1280.jpg"
-                            class="card-img-top" alt="jail-img">
+                            class="card-img-top" alt="jail-img" />
                         <div class="card-body">
                             <h3 class="card-title">Penitencia-rio</h3>
                             <p class="card-text">Penitenciary Law information</p>
@@ -62,9 +64,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3" style="background-color: #C3CEDA; width: 10rem;">
+                    <div class="card mb-3" style="background-color: #c3ceda; width: 10rem">
                         <img src="https://cdn.pixabay.com/photo/2015/03/26/09/41/tie-690084_1280.jpg"
-                            class="card-img-top" alt="whitecollar-img">
+                            class="card-img-top" alt="whitecollar-img" />
                         <div class="card-body">
                             <h3 class="card-title">Administr-ativo</h3>
                             <p class="card-text">Administrative Law information</p>
@@ -72,9 +74,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="background-color: #C3CEDA; width: 10rem;">
+                    <div class="card" style="background-color: #c3ceda; width: 10rem">
                         <img src="https://cdn.pixabay.com/photo/2012/10/10/16/53/soldier-60707_1280.jpg"
-                            class="card-img-top" alt="soldier-img">
+                            class="card-img-top" alt="soldier-img" />
                         <div class="card-body">
                             <h3 class="card-title">Militar</h3>
                             <p class="card-text">Military Law information</p>
@@ -82,9 +84,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3" style="background-color: #C3CEDA; width: 10rem;">
+                    <div class="card mb-3" style="background-color: #c3ceda; width: 10rem">
                         <img src="https://cdn.pixabay.com/photo/2015/04/12/16/33/hammer-719066_1280.jpg"
-                            class="card-img-top" alt=".justice-img">
+                            class="card-img-top" alt=".justice-img" />
                         <div class="card-body">
                             <h3 class="card-title">Procesal</h3>
                             <p class="card-text">Procesal Law information</p>
@@ -92,9 +94,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="background-color: #C3CEDA; width: 10rem;">
+                    <div class="card" style="background-color: #c3ceda; width: 10rem">
                         <img src="https://cdn.pixabay.com/photo/2015/10/12/15/07/buildings-984195_1280.jpg"
-                            class="card-img-top" alt="corporation-img">
+                            class="card-img-top" alt="corporation-img" />
                         <div class="card-body">
                             <h3 class="card-title">Corporati -vo</h3>
                             <p class="card-text">Corporation Law information</p>
@@ -102,9 +104,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="background-color: #C3CEDA; width: 10rem;">
+                    <div class="card" style="background-color: #c3ceda; width: 10rem">
                         <img src="https://cdn.pixabay.com/photo/2017/02/12/14/00/justice-2060093_1280.jpg"
-                            class="card-img-top" alt="court-img">
+                            class="card-img-top" alt="court-img" />
                         <div class="card-body">
                             <h3 class="card-title">Acusatori-o</h3>
                             <p class="card-text">Acusatory Law information</p>
