--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/home">Conócenos</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Conócenos</a>
                         <a class="nav-item nav-link" href="./pages/civil.html">Abogado Civil</a>
                         <a class="nav-item nav-link" href="./pages/familiar.html">Abogado Familiar</a>
                         <a class="nav-item nav-link" href="./pages/penal.html">Abogado Penalista</a>
