--- a/pages/civil.html
+++ b/pages/civil.html
@@ -23,7 +23,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Conócenos</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Conócenos</a>
                         <a class="nav-item nav-link" href="./civil.html">Abogado Civil</a>
                         <a class="nav-item nav-link" href="./familiar.html">Abogado Familiar</a>
                         <a class="nav-item nav-link" href="./penal.html">Abogado Penalista</a>
