--- a/pages/familiar.html
+++ b/pages/familiar.html
@@ -132,7 +132,7 @@
                     Visita nuestra sección de publicaciónes dando click en el botón de
                     abajo o contáctanos
                 </p>
-                <a href="/publicaciones" class="btn btn-primary">Publicaciónes</a>
+                <a href="publicaciones.html" class="btn btn-primary">Publicaciónes</a>
             </div>
         </div>
     </section>
