new html file created

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Iglesias y Abogados</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,6 +34,8 @@
                 </div>
             </div>
         </nav>
+
+        
 
         <!-- {{! For second a background container with an image, as the previews one is going to be on all the handlebars}} -->
         <div class="container-fluid background-image"></div>
@@ -136,6 +138,7 @@
 
         <!-- {{!-- Make a section for the legal advise --}} -->
         <section class="footer-legal-advise"></section>
+        
     </footer>
 </body>
 
