--- a/pages/civil.html
+++ b/pages/civil.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -40,73 +41,80 @@
     </header>
 
     <main class="ml-3 mr-3 civil-main-section">
-
         <section class="first-main-section">
-            <div class='container-fluid first-header'>
-                <h3 class='text-center'>Área Civil</h3>
-                <p class='text-center fist-paragraph'>En el área de derecho civil nos especializamos en diferentes ramas
-                    como lo son mercantil, etc.</p>
+            <div class="container-fluid first-header">
+                <h5 class="text-center">Área Civil</h5>
+                <p class="text-center fist-paragraph">
+                    En el área de derecho civil nos especializamos en diferentes ramas
+                    como lo son mercantil, etc.
+                </p>
             </div>
         </section>
 
         <section class="second-main-section">
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
+                    <div class="card" style="background-color: #c3ceda">
                         <img src="https://cdn.pixabay.com/photo/2014/09/07/21/52/city-438393_1280.jpg"
-                            class="img-fluid card-img-top" alt="people-img">
+                            class="img-fluid card-img-top" alt="people-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Personas</h3>
+                            <h5 class="card-title">Personas</h5>
                             <p class="card-text">People Law information</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3" style="background-color: #C3CEDA;">
+                    <div class="card mb-3" style="background-color: #c3ceda">
                         <img src="https://cdn.pixabay.com/photo/2018/07/02/12/53/ferrari-3511456_1280.jpg"
-                            class="img-fluid card-img-top" alt="car-img">
+                            class="img-fluid card-img-top" alt="car-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Bienes</h3>
+                            <h5 class="card-title">Bienes</h5>
                             <p class="card-text">Assets Law information</p>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
+                    <div class="card" style="background-color: #c3ceda">
                         <img src="https://cdn.pixabay.com/photo/2014/04/10/15/28/fountain-321028_1280.jpg"
-                            class="img-fluid card-img-top " alt="house-img">
+                            class="img-fluid card-img-top" alt="house-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Propiedad</h3>
+                            <h5 class="card-title">Propiedad</h5>
                             <p class="card-text">Property Law information</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3" style="background-color: #C3CEDA;">
+                    <div class="card mb-3" style="background-color: #c3ceda">
                         <img src="https://cdn.pixabay.com/photo/2018/02/02/13/17/the-dollar-3125419_1280.jpg"
-                            class="img-fluid card-img-top" alt="possesion-img">
+                            class="img-fluid card-img-top" alt="possesion-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Posesión</h3>
+                            <h5 class="card-title">Posesión</h5>
                             <p class="card-text">Possesions Law information</p>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
+                    <div class="card" style="background-color: #c3ceda">
                         <img src="https://cdn.pixabay.com/photo/2017/09/09/01/27/attorney-2730806_1280.jpg"
-                            class="img-fluid card-img-top" alt="sucesion-img">
+                            class="img-fluid card-img-top" alt="sucesion-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Sucesión</h3>
+                            <h5 class="card-title">Sucesión</h5>
                             <p class="card-text">Sussesions Law information</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
+                    <div class="card" style="background-color: #c3ceda">
                         <img src="https://cdn.pixabay.com/photo/2020/12/05/14/08/man-5806012_1280.jpg"
-                            class="img-fluid card-img-top" alt="contract-img">
+                            class="img-fluid card-img-top" alt="contract-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Contratos</h3>
+                            <h5 class="card-title">Contratos</h5>
                             <p class="card-text">Contracts Law information</p>
                         </div>
                     </div>
