--- a/pages/familiar.html
+++ b/pages/familiar.html
@@ -58,7 +58,7 @@
                         <img src="https://cdn.pixabay.com/photo/2017/08/06/20/11/wedding-2595862_1280.jpg"
                             class="img-fluid card-img-top" alt="mariage-img">
                         <div class="card-body">
-                            <h3 class="card-title">Matrimonio</h3>
+                            <h5 class="card-title">Matrimonio</h5>
                             <p class="card-text">Mariage Law information</p>
                         </div>
                     </div>
@@ -68,17 +68,20 @@
                         <img src="https://cdn.pixabay.com/photo/2015/08/26/16/18/breakup-908714_1280.jpg"
                             class="img-fluid card-img-top" alt="divorce-img">
                         <div class="card-body">
-                            <h3 class="card-title">Divorcio</h3>
+                            <h5 class="card-title">Divorcio</h5>
                             <p class="card-text">Divorce Law information</p>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card" style="background-color: #C3CEDA;">
                         <img src="https://cdn.pixabay.com/photo/2017/06/20/22/14/man-2425121_1280.jpg"
                             class="img-fluid card-img-top" alt="couple-img">
                         <div class="card-body">
-                            <h3 class="card-title">Concubinato</h3>
+                            <h5 class="card-title">Concubinato</h5>
                             <p class="card-text">Concubinage Law information</p>
                         </div>
                     </div>
@@ -88,17 +91,20 @@
                         <img src="https://cdn.pixabay.com/photo/2017/07/08/21/30/family-2485714_1280.jpg"
                             class="img-fluid card-img-top" alt="parent-son-img">
                         <div class="card-body">
-                            <h3 class="card-title">Filiación</h3>
+                            <h5 class="card-title">Filiación</h5>
                             <p class="card-text">Filiation Law information</p>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card" style="background-color: #C3CEDA;">
                         <img src="https://cdn.pixabay.com/photo/2019/10/19/16/30/poverty-4561704_1280.jpg"
                             class="img-fluid card-img-top" alt="monwy-img">
                         <div class="card-body">
-                            <h3 class="card-title">Pensión</h3>
+                            <h5 class="card-title">Pensión</h5>
                             <p class="card-text">Pension Law information</p>
                         </div>
                     </div>
@@ -108,7 +114,7 @@
                         <img src="https://cdn.pixabay.com/photo/2020/03/28/00/21/hands-4975341_1280.jpg"
                             class="img-fluid card-img-top" alt="...">
                         <div class="card-body">
-                            <h3 class="card-title">Adopción</h3>
+                            <h5 class="card-title">Adopción</h5>
                             <p class="card-text">Adoption Law information</p>
                         </div>
                     </div>
