--- a/pages/penal.html
+++ b/pages/penal.html
@@ -43,7 +43,7 @@
     <main class="ml-3 mr-3 penal-main-section">
         <section class="first-main-section">
             <div class="first-header">
-                <h3 class="text-center">Área Penal</h3>
+                <h5 class="text-center">Área Penal</h5>
                 <p class="text-center fist-paragraph">
                     En el área de derecho penal nos especializamos en diferentes ramas
                     como lo son maleantes, etc.
@@ -54,61 +54,67 @@
         <section class="second-main-section">
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #c3ceda; width: 10rem">
+                    <div class="card" style="background-color: #c3ceda;">
                         <img src="https://cdn.pixabay.com/photo/2014/12/02/11/21/prison-553836_1280.jpg"
                             class="card-img-top" alt="jail-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Penitencia-rio</h3>
+                            <h5 class="card-title">Penitenciario</h5>
                             <p class="card-text">Penitenciary Law information</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3" style="background-color: #c3ceda; width: 10rem">
+                    <div class="card mb-3" style="background-color: #c3ceda;">
                         <img src="https://cdn.pixabay.com/photo/2015/03/26/09/41/tie-690084_1280.jpg"
                             class="card-img-top" alt="whitecollar-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Administr-ativo</h3>
+                            <h5 class="card-title fs-6">Administrativo</h5>
                             <p class="card-text">Administrative Law information</p>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #c3ceda; width: 10rem">
+                    <div class="card" style="background-color: #c3ceda;">
                         <img src="https://cdn.pixabay.com/photo/2012/10/10/16/53/soldier-60707_1280.jpg"
                             class="card-img-top" alt="soldier-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Militar</h3>
+                            <h5 class="card-title">Militar</h5>
                             <p class="card-text">Military Law information</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3" style="background-color: #c3ceda; width: 10rem">
+                    <div class="card mb-3" style="background-color: #c3ceda;">
                         <img src="https://cdn.pixabay.com/photo/2015/04/12/16/33/hammer-719066_1280.jpg"
                             class="card-img-top" alt=".justice-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Procesal</h3>
+                            <h5 class="card-title">Procesal</h5>
                             <p class="card-text">Procesal Law information</p>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #c3ceda; width: 10rem">
+                    <div class="card" style="background-color: #c3ceda;">
                         <img src="https://cdn.pixabay.com/photo/2015/10/12/15/07/buildings-984195_1280.jpg"
                             class="card-img-top" alt="corporation-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Corporati -vo</h3>
+                            <h5 class="card-title">Corporativo</h5>
                             <p class="card-text">Corporation Law information</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="background-color: #c3ceda; width: 10rem">
+                    <div class="card" style="background-color: #c3ceda;">
                         <img src="https://cdn.pixabay.com/photo/2017/02/12/14/00/justice-2060093_1280.jpg"
                             class="card-img-top" alt="court-img" />
                         <div class="card-body">
-                            <h3 class="card-title">Acusatori-o</h3>
+                            <h5 class="card-title">Acusatorio</h5>
                             <p class="card-text">Acusatory Law information</p>
                         </div>
                     </div>
