--- a/pages/publicaciones.html
+++ b/pages/publicaciones.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Iglesias y Abogados</a>
+                <a class="navbar-brand" href="../index.html">Iglesias y Abogados</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Conócenos</a>
+                        <a class="nav-link active" aria-current="page" href="./welcome.html">Conócenos</a>
                         <a class="nav-item nav-link" href="./civil.html">Abogado Civil</a>
                         <a class="nav-item nav-link" href="./familiar.html">Abogado Familiar</a>
                         <a class="nav-item nav-link" href="./penal.html">Abogado Penalista</a>
