--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -102,7 +102,7 @@
                         Visita nuestra sección de publicaciónes dando click en el botón de
                         abajo o contáctanos
                     </p>
-                    <a href="./pages/publicaciones.html" class="btn btn-primary">Publicaciónes</a>
+                    <a href="./publicaciones.html" class="btn btn-primary">Publicaciónes</a>
                 </div>
             </div>
         </section>
