--- a/pages/civil.html
+++ b/pages/civil.html
@@ -7,7 +7,7 @@
     <title>Iglesias y Abogados</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../public/css/style.css" />
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                         <a class="nav-item nav-link" href="./familiar.html">Abogado Familiar</a>
                         <a class="nav-item nav-link" href="./penal.html">Abogado Penalista</a>
                         <a class="nav-item nav-link" href="./publicaciones.html">Publicaciones</a>
-                        <a class="nav-item nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-item nav-link" href="../public/contactform.html">Contacto</a>
                         <a class="nav-item nav-link" href="#">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
                 </div>
