--- a/public/publicaciones.html
+++ b/public/publicaciones.html
@@ -7,7 +7,7 @@
     <title>Iglesias y Abogados</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../public/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Iglesias y Abogados</a>
+                <a class="navbar-brand" href="/home">Iglesias y Abogados</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -24,12 +24,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="./welcome.html">Conócenos</a>
-                        <a class="nav-item nav-link" href="./civil.html">Abogado Civil</a>
-                        <a class="nav-item nav-link" href="./familiar.html">Abogado Familiar</a>
-                        <a class="nav-item nav-link" href="./penal.html">Abogado Penalista</a>
-                        <a class="nav-item nav-link" href="./publicaciones.html">Publicaciones</a>
-                        <a class="nav-item nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link active" aria-current="page" href="/welcome">Conócenos</a>
+                        <a class="nav-item nav-link" href="/civil">Abogado Civil</a>
+                        <a class="nav-item nav-link" href="/familiar">Abogado Familiar</a>
+                        <a class="nav-item nav-link" href="/penal">Abogado Penalista</a>
+                        <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
+                        <a class="nav-item nav-link" href="/contact">Contacto</a>
                         <a class="nav-item nav-link" href="#">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
                 </div>
