--- a/public/familiar.html
+++ b/public/familiar.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Iglesias y Abogados</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Iglesias y Abogados</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../public/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Iglesias y Abogados</a>
+                <a class="navbar-brand" href="/home">Iglesias y Abogados</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -24,12 +24,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="./welcome.html">Conócenos</a>
-                        <a class="nav-item nav-link" href="./civil.html">Abogado Civil</a>
-                        <a class="nav-item nav-link" href="./familiar.html">Abogado Familiar</a>
-                        <a class="nav-item nav-link" href="./penal.html">Abogado Penalista</a>
-                        <a class="nav-item nav-link" href="./publicaciones.html">Publicaciones</a>
-                        <a class="nav-item nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link active" aria-current="page" href="/welcome">Conócenos</a>
+                        <a class="nav-item nav-link" href="/civil">Abogado Civil</a>
+                        <a class="nav-item nav-link" href="/familiar">Abogado Familiar</a>
+                        <a class="nav-item nav-link" href="/penal">Abogado Penalista</a>
+                        <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
+                        <a class="nav-item nav-link" href="/contact">Contacto</a>
                         <a class="nav-item nav-link" href="#">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
                 </div>
@@ -37,39 +37,39 @@
         </nav>
 
         <!-- {{! For second a background container with an image, as the previews one is going to be on all the handlebars}} -->
-        <div class="container-fluid background-image-penal"></div>
+        <div class="container-fluid background-image-familiar"></div>
     </header>
 
-    <main class="ml-3 mr-3 penal-main-section">
+    <main class="ml-3 mr-3 familiar-main-section">
+
         <section class="first-main-section">
-            <div class="first-header">
-                <h5 class="text-center">Área Penal</h5>
-                <p class="text-center fist-paragraph">
-                    En el área de derecho penal nos especializamos en diferentes ramas
-                    como lo son maleantes, etc.
-                </p>
+            <div class='container-fluid first-header'>
+                <h1 class='text-center'>Área Familiar</h1>
+                <p class='text-center fist-paragraph'>En el área de derecho familiar nos especializamos en diferentes
+                    ramas
+                    como lo son divs, etc.</p>
             </div>
         </section>
 
         <section class="second-main-section">
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2014/12/02/11/21/prison-553836_1280.jpg"
-                            class="card-img-top" alt="jail-img" />
+                    <div class="card" style="background-color: #C3CEDA;">
+                        <img src="https://cdn.pixabay.com/photo/2017/08/06/20/11/wedding-2595862_1280.jpg"
+                            class="img-fluid card-img-top" alt="mariage-img">
                         <div class="card-body">
-                            <h5 class="card-title">Penitenciario</h5>
-                            <p class="card-text">Penitenciary Law information</p>
+                            <h5 class="card-title">Matrimonio</h5>
+                            <p class="card-text">Mariage Law information</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2015/03/26/09/41/tie-690084_1280.jpg"
-                            class="card-img-top" alt="whitecollar-img" />
+                    <div class="card mb-3" style="background-color: #C3CEDA;">
+                        <img src="https://cdn.pixabay.com/photo/2015/08/26/16/18/breakup-908714_1280.jpg"
+                            class="img-fluid card-img-top" alt="divorce-img">
                         <div class="card-body">
-                            <h5 class="card-title fs-6">Administrativo</h5>
-                            <p class="card-text">Administrative Law information</p>
+                            <h5 class="card-title">Divorcio</h5>
+                            <p class="card-text">Divorce Law information</p>
                         </div>
                     </div>
                 </div>
@@ -77,22 +77,22 @@
 
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2012/10/10/16/53/soldier-60707_1280.jpg"
-                            class="card-img-top" alt="soldier-img" />
+                    <div class="card" style="background-color: #C3CEDA;">
+                        <img src="https://cdn.pixabay.com/photo/2017/06/20/22/14/man-2425121_1280.jpg"
+                            class="img-fluid card-img-top" alt="couple-img">
                         <div class="card-body">
-                            <h5 class="card-title">Militar</h5>
-                            <p class="card-text">Military Law information</p>
+                            <h5 class="card-title">Concubinato</h5>
+                            <p class="card-text">Concubinage Law information</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card mb-3" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2015/04/12/16/33/hammer-719066_1280.jpg"
-                            class="card-img-top" alt=".justice-img" />
+                    <div class="card mb-3" style="background-color: #C3CEDA;">
+                        <img src="https://cdn.pixabay.com/photo/2017/07/08/21/30/family-2485714_1280.jpg"
+                            class="img-fluid card-img-top" alt="parent-son-img">
                         <div class="card-body">
-                            <h5 class="card-title">Procesal</h5>
-                            <p class="card-text">Procesal Law information</p>
+                            <h5 class="card-title">Filiación</h5>
+                            <p class="card-text">Filiation Law information</p>
                         </div>
                     </div>
                 </div>
@@ -100,48 +100,49 @@
 
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2015/10/12/15/07/buildings-984195_1280.jpg"
-                            class="card-img-top" alt="corporation-img" />
+                    <div class="card" style="background-color: #C3CEDA;">
+                        <img src="https://cdn.pixabay.com/photo/2019/10/19/16/30/poverty-4561704_1280.jpg"
+                            class="img-fluid card-img-top" alt="monwy-img">
                         <div class="card-body">
-                            <h5 class="card-title">Corporativo</h5>
-                            <p class="card-text">Corporation Law information</p>
+                            <h5 class="card-title">Pensión</h5>
+                            <p class="card-text">Pension Law information</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2017/02/12/14/00/justice-2060093_1280.jpg"
-                            class="card-img-top" alt="court-img" />
+                    <div class="card" style="background-color: #C3CEDA;">
+                        <img src="https://cdn.pixabay.com/photo/2020/03/28/00/21/hands-4975341_1280.jpg"
+                            class="img-fluid card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Acusatorio</h5>
-                            <p class="card-text">Acusatory Law information</p>
+                            <h5 class="card-title">Adopción</h5>
+                            <p class="card-text">Adoption Law information</p>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- {{!-- Create a button so all the users can go to the publications section
-        --}} -->
-        <section class="redirected-to-publications">
-            <div class="card border-light">
-                <!-- {{!--
-                <div class="text-center card-header">Featured</div>
-                --}} -->
-                <div class="text-center card-body">
-                    <h5 class="card-title">
-                        ¿Tienes dudas? Tranquil@ estamos para apoyarte.
-                    </h5>
-                    <p class="card-text">
-                        Visita nuestra sección de publicaciónes dando click en el botón de
-                        abajo o contáctanos
-                    </p>
-                    <a href="publicaciones.html" class="btn btn-primary">Publicaciónes</a>
                 </div>
             </div>
         </section>
     </main>
+
+    <!-- {{!-- Create a button so all the users can go to the publications section
+        --}} -->
+    <section class="redirected-to-publications">
+        <div class="card border-light">
+            <!-- {{!--
+                <div class="text-center card-header">Featured</div>
+                --}} -->
+            <div class="text-center card-body">
+                <h5 class="card-title">
+                    ¿Tienes dudas? Tranquil@ estamos para apoyarte.
+                </h5>
+                <p class="card-text">
+                    Visita nuestra sección de publicaciónes dando click en el botón de
+                    abajo o contáctanos
+                </p>
+                <a href="publicaciones.html" class="btn btn-primary">Publicaciónes</a>
+            </div>
+        </div>
+    </section>
+
     <!-- {{!-- Third section of the homepage or presentation page this one has to go on the main handlebrs so it can be in
         the
         whole page --}} -->
