--- a/public/penal.html
+++ b/public/penal.html
@@ -137,7 +137,7 @@
                         Visita nuestra sección de publicaciónes dando click en el botón de
                         abajo o contáctanos
                     </p>
-                    <a href="publicaciones.html" class="btn btn-primary">Publicaciónes</a>
+                    <a href="/publicaciones" class="btn btn-primary">Publicaciónes</a>
                 </div>
             </div>
         </section>
