--- a/public/civil.html
+++ b/public/civil.html
@@ -30,7 +30,7 @@
                         <a class="nav-item nav-link" aria-current="page" href="/penal">Abogado Penalista</a>
                         <a class="nav-item nav-link" aria-current="page" href="/publicaciones">Publicaciones</a>
                         <a class="nav-item nav-link" aria-current="page" href="/contact">Contacto</a>
-                        <a class="nav-item nav-link" aria-current="page" href="#">Aspectos Legales/Aviso de
+                        <a class="nav-item nav-link" aria-current="page" href="/advise">Aspectos Legales/Aviso de
                             Privacidad</a>
                     </div>
                 </div>
@@ -172,7 +172,8 @@
         </section>
 
         <!-- {{!-- Make a section for the legal advise --}} -->
-        <section class="footer-legal-advise"></section>
+        <section class="footer-legal-advise">
+        </section>
     </footer>
 
 </body>
