--- a/public/penal.html
+++ b/public/penal.html
@@ -29,7 +29,7 @@
                         <a class="nav-item nav-link active" href="/penal">Abogado Penalista</a>
                         <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
                         <a class="nav-item nav-link" href="/contact">Contacto</a>
-                        <a class="nav-item nav-link" href="#">Aspectos Legales/Aviso de Privacidad</a>
+                        <a class="nav-item nav-link" href="/advise">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
                 </div>
             </div>
