--- a/public/contactform.html
+++ b/public/contactform.html
@@ -28,7 +28,7 @@
                         <a class="nav-item nav-link" aria-current="page" href="/penal">Abogado Penalista</a>
                         <a class="nav-item nav-link" aria-current="page" href="/publicaciones">Publicaciones</a>
                         <a class="nav-item nav-link active" aria-current="page" href="/contact">Contacto</a>
-                        <a class="nav-item nav-link" aria-current="page" href="#">Aspectos Legales/Aviso de Privacidad</a>
+                        <a class="nav-item nav-link" aria-current="page" href="/advise">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
                 </div>
             </div>
