creation of html file inmobiliario and creation and modification of js routes, now working on every html file

--- a/public/civil.html
+++ b/public/civil.html
@@ -24,13 +24,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/conócenos">Conócenos</a>
+                        <a class="nav-link active" aria-current="page" href="/conocenos">Conócenos</a>
                         <a class="nav-item nav-link" href="/derechoinmobiliario">Derecho Inmobiliario</a>
                         <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
                         <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
-                        <a class="nav-item nav-link" href="/contact">Contacto</a>
+                        <a class="nav-item nav-link" href="/contacto">Contacto</a>
                         <a class="nav-item nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
                 </div>
