--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/conócenos">Conócenos</a>
+                        <a class="nav-link active" aria-current="page" href="/conocenos">Conócenos</a>
                         <a class="nav-item nav-link" href="/derechoinmobiliario">Derecho Inmobiliario</a>
                         <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
