meta tags of description added in html files less contact form and legal advise

--- a/public/inmobiliario.html
+++ b/public/inmobiliario.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Litigio en materia inmobiliaria</title>
+    <meta name="description"
+        content="Iglesias y abogados: bufete de abogados especialistas en litigio en materia inmobiliaria. Arrendamientos, uso de habitación, recuperación de inmuebles.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
