--- a/public/familiar.html
+++ b/public/familiar.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Litigio en materia familiar</title>
+    <meta name="description"
+    content="Iglesias y abogados: bufete de abogados especialistas en litigio en materia familiar. Divorcios, violencia familiar, sucesión testamentaria, amparos.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
