--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abogados especializados en litigio - Iglesias y abogados</title>
-    <meta name="description" content="All about meta tags and how to add them to your website.">
+    <meta name="description"
+        content="Iglesias y abogados: bufete de abogados especializado en litigio en materia civil, mercantil, familiar, penal, inmobiliaria y en investigaciones.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
